#4072 [CreateTicket] fix: text overflow on cards

--- a/css/digiriskdolibarr.css
+++ b/css/digiriskdolibarr.css
@@ -2118,6 +2118,13 @@ div.wpeo-modal-patchnote .wpeo-button {
   justify-content: center;
 }
 
+.cardFlex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+
 .page-ut-gp-list {
   margin-left: -30px;
   -webkit-box-sizing: border-box;
